// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toODataQuery should convert empty State 1`] = `
Object {
  "filter": undefined,
  "orderBy": undefined,
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert no sorting 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "filters": Array [
          Object {
            "field": "abc",
            "operator": Object {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "xyz",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "and",
  },
  "orderBy": undefined,
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert state with Child Filter 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "filters": Array [
          Object {
            "childTable": "abc/bdf",
            "field": "xyz",
            "linqOperation": "any",
            "operator": Object {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "123",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "and",
  },
  "orderBy": Array [
    Object {
      "dir": "asc",
      "field": "abc",
    },
    Object {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert typical State 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "filters": Array [
          Object {
            "field": "abc",
            "operator": Object {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "xyz",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "and",
  },
  "orderBy": Array [
    Object {
      "dir": "asc",
      "field": "abc",
    },
    Object {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert with no filters 1`] = `
Object {
  "filter": undefined,
  "orderBy": Array [
    Object {
      "dir": "asc",
      "field": "abc",
    },
    Object {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;
